--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,8 +28,8 @@
         <div class="row">
           <a id="pageTitle" href="{{ site.baseurl }}/" class="columns small-1 medium-4">
             <span class="show-for-large-up">{{ site.name }}</span>
-            <span class="show-for-medium-only">DoT Mobile</span>
-            <span class="show-for-small-only">DoT</span>
+            <span class="show-for-medium-only">Ori Mobile</span>
+            <span class="show-for-small-only">Ori</span>
           </a>
           <ul id="colorLinks" class="columns small-11 medium-8">
             <a href="{{ site.baseurl }}/#colorless"><li class="colorlessLink"></li></a>
